# agri_supply_chain

./: Cargo.toml  README.md  code.txt  deploy_local.sh  dfx.json  package-lock.json  package.json
src/hack1_backend/: Cargo.toml  hack1_backend.did
src/hack1_backend/src/api/queries/: admin_queries_api.rs  mod.rs  product.rs  user_queries_api.rs  verify.rs
src/hack1_backend/src/api/updates/: admin_controller.rs  admin_update_api.rs  digital_verify.rs  mod.rs  products_controller.rs  products_update_api.rs  user_controller.rs  user_update_api.rs
src/hack1_backend/src/models/: agriculture.rs  customer.rs  distributor.rs  farmer.rs  mod.rs  product.rs  retailer_types.rs
src/hack1_backend/src/store/: memory.rs  storage_state.rs
src/hack1_backend/src/utils/: constants.rs  guards.rs
src/hack1_frontend/: package.json
src/hack1_frontend/src/: App.jsx
