[package]
name = "hack1_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"  # Optional
ic-stable-structures = "0.6.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
candid-extractor = "0.1.2"
serde_bytes = "0.11.14"
sha2 = "0.10"
base64 = "0.21"
rand_chacha = "0.3"  # Optional if you still need ChaCha
hex = "0.4"
getrandom = { version = "0.2", features = ["js"], optional = true }
ed25519-dalek = { version = "1.0", features = ["rand"] }
rand = { version = "0.8", features = ["std"] } # Use std feature to get StdRng
wasm-bindgen = "0.2"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

